
ChangeLog for jsrsasign

* Changes from 10.5.0 to next release
  - src/ecdsa-modified.js
    - missing variable definition fix (#527)
  - fix ECC P-521 curve issues (#528)
    - src/ecdsa-modified.js
      - asn1SigToConcatSig fix P521 issue
      - concatSigToASN1Sig fix P521 issue
    - src/jws.js
      - add ES512 support
    - src/keyutil.js
      - fix P-521 issue in getKey,getJWKFromKey,
    - tool/tool_jwt.html
      - add ES512 support
    - test/qunit-do-ecdsamod-s.html
      - add P-521 asn1SigToConcatSig tests
      - add P-521 concatSigToASN1Sig tests
    - test/qunit-do-ecdsamod.html
      - add sha512 tests
    - test/qunit-do-jws-sign.html
      - add signing and verification ES512 test
    - test/qunit-do-keyutil-ec.html
      - add P-521 key test
    - test/qunit-do-keyutil-jwk.html
      - add P-521 private key test
    - test/qunit-do-x509-key.html
      - add P-521 certificate test
  - JWK from X509 certificate (#529)
    - src/x509.js (followings will be move to KEYUTIL)
      - getPublicKeyJWK (
      - readCertJWK
    - test/qunit-do-x509-jwk.html (NEW)
      - add getPublicKeyJWK, readCertJWK test cases

Add EC support for secp521r1 secp224r1 secp192r1
* Changes from 10.4.1 to 10.5.0
  - Add EC support for secp521r1 secp224r1 secp192r1 (#521 #519)
    Thank you indeed for @cplussharp 's great work.
    - EC key length bugs for newly supported curves are fixed.
      - src/ecdsa-modified: key length fixes
      - src/ecparam.js: add keycharlen property
      - src/asn1x509.js: add secp521r1 OID
      - test/qunit-do-ecdsamod.html: all test code passed
      - test/qunit-do-ecdsamod-unsupport.html: all test code passed
      - test/qunit-do-ecdsamod-s.html: all test code passed
      - test/qunit-do-ecdsamod-nisttv.html: added for NIST EC keygen test
      - sample/sample-ecdsa.html: add P-521
  - sample/sample-rsasign.html
    - fix to trim non hexadecimal strings (#517)

GeneralizedTime, UTCTime refactoring and some bug fix